Add 'ClientStateHandler', a generic client-side handler for events emitted by a HistoryStore; HistoryStore: no longer specify how to obtain stamp (PersistedHistoryStore get it from the database, InMemoryHistoryStore keep it in the store instance); implement missing equals/hashCode in SessionBroadcastTarget to make it a value object suitable as a HashMap key. JavaScript: remove block(), brace insertion is now automatic; @JS now generates a XValues to support treating complex objects as Value<X>; AbstractComponent Element factory methods are now static; introduce HtmlFragment interface, an Iterable<Html>; Unit: a single-instance object, for when we don't want to return anything but don't like using nulls.